--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.6.0"
+    "version": "3.7.1"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
     "hexo": "^3.2.0",
+    "hexo-filter-lqip": "github:ertrzyiks/hexo-filter-lqip",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
@@ -15,11 +15,6 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
-    "potrace": "^2.1.1",
-    "sharp": "^0.20.1",
-    "stream-to-array": "^2.3.0",
-    "string-replace-async": "^1.2.1",
-    "svgo": "^1.0.5"
+    "hexo-server": "^0.2.0"
   }
 }
