--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "hexo": {
     "version": "3.7.1"
   },
+  "scripts": {
+    "start": "hexo server --open"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-filter-lqip": "github:ertrzyiks/hexo-filter-lqip",
+    "hexo-filter-lqip": "github:ertrzyiks/hexo-filter-lqip#322e5f091319029341569caebd7f033070d3a5b8",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
