--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-filter-lqip": "github:ertrzyiks/hexo-filter-lqip#322e5f091319029341569caebd7f033070d3a5b8",
+    "hexo-filter-lqip": "^1.0.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
